# 2FI-ImageProcessing

./: CMakeLists.txt  README.md  test.cpp
Ex07/: ex7-perspective.cpp  ex7-rotateScale.cpp  sp7-mouseEvent.cpp  sp7-mouseRect.cpp
Ex2/: ex2-camGreyNega.cpp  ex2-camSplitMerge.cpp  ex2-grayImage.cpp  ex2-grayNegaposi.cpp  ex2-split-merge.cpp  ex2-split.cpp
Ex3/: ex3-BGR2HSV.cpp  readImage.cpp
Ex4/: ex4-alphablend.cpp  ex4-blendMask.cpp  ex4-blueToneByEq.cpp  ex4-pesudoColor.cpp  ex4-toneByEq.cpp  ex4-toneByTable.cpp
Ex5/: ex5-blurs.cpp  ex5-edges.cpp  ex5-medBlur.cpp  ex5-sharp.cpp
Lec11/: ex11-houghTrans.cpp  ex11-tempMatch.cpp  第９週 18nc021.docx
Lec12/: ex12-backSub.cpp  ex12-frameSub.cpp
Lec13/: ex13-catDetect.cpp  ex13-faceDetect.cpp
Lec9/: ex9-length.cpp  ex9-morpho.cpp  sp9-skeleton.cpp
lec10/: ex10-posterize64.cpp  ex10-posterizeAny.cpp
