cmake_minimum_required(VERSION 3.14)
project(ImageProc)

set(CMAKE_CXX_STANDARD 14)

find_package(OpenCV REQUIRED)

add_executable(testis test.cpp)
add_executable(ex2-camGreyNega Ex2/ex2-camGreyNega.cpp)
add_executable(ex2-camSplitMerge Ex2/ex2-camSplitMerge.cpp)
add_executable(ex2-grayImage Ex2/ex2-grayImage.cpp)
add_executable(ex2-grayNegaposi Ex2/ex2-grayNegaposi.cpp)
add_executable(ex2-split Ex2/ex2-split.cpp)
add_executable(ex2-split-merge Ex2/ex2-split-merge.cpp)
add_executable(ex3-BGR2HSV Ex3/ex3-BGR2HSV.cpp)
add_executable(ex-3-readImage Ex3/readImage.cpp)
add_executable(ex4-alphablend Ex4/ex4-alphablend.cpp)
add_executable(ex4-blendMask Ex4/ex4-blendMask.cpp)
add_executable(ex4-blueToneByEq Ex4/ex4-blueToneByEq.cpp)
add_executable(ex4-pesudoColor Ex4/ex4-pesudoColor.cpp)
add_executable(ex4-toneByEq Ex4/ex4-toneByEq.cpp)
add_executable(ex4-toneByTable Ex4/ex4-toneByTable.cpp)
add_executable(ex5-blurs Ex5/ex5-blurs.cpp)
add_executable(ex5-edges Ex5/ex5-edges.cpp)
add_executable(ex5-medBlur Ex5/ex5-medBlur.cpp)
add_executable(ex5-sharp Ex5/ex5-sharp.cpp)



target_link_libraries(testis ${OpenCV_LIBS})
target_link_libraries(ex2-camGreyNega ${OpenCV_LIBS})
target_link_libraries(ex2-camGreyNega ${OpenCV_LIBS})
target_link_libraries(ex2-camSplitMerge ${OpenCV_LIBS})
target_link_libraries(ex2-grayImage ${OpenCV_LIBS})
target_link_libraries(ex2-grayNegaposi ${OpenCV_LIBS})
target_link_libraries(ex2-split ${OpenCV_LIBS})
target_link_libraries(ex2-split-merge ${OpenCV_LIBS})
target_link_libraries(ex3-BGR2HSV ${OpenCV_LIBS})
target_link_libraries(ex-3-readImage ${OpenCV_LIBS})
target_link_libraries(ex4-alphablend ${OpenCV_LIBS})
target_link_libraries(ex4-blendMask ${OpenCV_LIBS})
target_link_libraries(ex4-blueToneByEq ${OpenCV_LIBS})
target_link_libraries(ex4-pesudoColor ${OpenCV_LIBS})
target_link_libraries(ex4-toneByEq ${OpenCV_LIBS})
target_link_libraries(ex4-toneByTable ${OpenCV_LIBS})
target_link_libraries(ex5-blurs ${OpenCV_LIBS})
target_link_libraries(ex5-edges ${OpenCV_LIBS})
target_link_libraries(ex5-medBlur ${OpenCV_LIBS})
target_link_libraries(ex5-sharp ${OpenCV_LIBS})
