cmake_minimum_required(VERSION 3.14)
project(ImageProc)

set(CMAKE_CXX_STANDARD 14)

find_package(OpenCV REQUIRED)

add_executable(testis test.cpp)
add_executable(ex2-camGreyNega Ex2/ex2-camGreyNega.cpp)
add_executable(ex2-camSplitMerge Ex2/ex2-camSplitMerge.cpp)
add_executable(ex2-grayImage Ex2/ex2-grayImage.cpp)
add_executable(ex2-grayNegaposi Ex2/ex2-grayNegaposi.cpp)
add_executable(ex2-split Ex2/ex2-split.cpp)
add_executable(ex2-split-merge Ex2/ex2-split-merge.cpp)
add_executable(ex3-BGR2HSV Ex3/ex3-BGR2HSV.cpp)
add_executable(ex3-readImage Ex3/readImage.cpp)
add_executable(ex4-alphablend Ex4/ex4-alphablend.cpp)
add_executable(ex4-blendMask Ex4/ex4-blendMask.cpp)
add_executable(ex4-blueToneByEq Ex4/ex4-blueToneByEq.cpp)
add_executable(ex4-pesudoColor Ex4/ex4-pesudoColor.cpp)
add_executable(ex4-toneByEq Ex4/ex4-toneByEq.cpp)
add_executable(ex4-toneByTable Ex4/ex4-toneByTable.cpp)
add_executable(ex5-blurs Ex5/ex5-blurs.cpp)
add_executable(ex5-edges Ex5/ex5-edges.cpp)
add_executable(ex5-medBlur Ex5/ex5-medBlur.cpp)
add_executable(ex5-sharp Ex5/ex5-sharp.cpp)
add_executable(sp7-mouseEvent Ex07/sp7-mouseEvent.cpp)
add_executable(sp7-mouseRect Ex07/sp7-mouseRect.cpp)
add_executable(sp7-rotateScale Ex07/ex7-rotateScale.cpp)
add_executable(ex7-perspective Ex07/ex7-perspective.cpp)
add_executable(ex11-houghTrans Lec11/ex11-houghTrans.cpp)
add_executable(ex11-tempMatch Lec11/ex11-tempMatch.cpp)
add_executable(ex9-morpho Lec9/ex9-morpho.cpp)
add_executable(sp9-skeleton Lec9/sp9-skeleton.cpp)
add_executable(ex9-length Lec9/ex9-length.cpp)
add_executable(ex10-posterize64 lec10/ex10-posterize64.cpp)
add_executable(ex10-posterizeAny lec10/ex10-posterizeAny.cpp)
add_executable(ex12-backSub Lec12/ex12-backSub.cpp)
add_executable(ex12-frameSub Lec12/ex12-frameSub.cpp)
add_executable(ex13-faceDetect Lec13/ex13-faceDetect.cpp)
add_executable(ex13-catDetect Lec13/ex13-catDetect.cpp)

target_link_libraries(testis ${OpenCV_LIBS})
target_link_libraries(ex2-camGreyNega ${OpenCV_LIBS})
target_link_libraries(ex2-camGreyNega ${OpenCV_LIBS})
target_link_libraries(ex2-camSplitMerge ${OpenCV_LIBS})
target_link_libraries(ex2-grayImage ${OpenCV_LIBS})
target_link_libraries(ex2-grayNegaposi ${OpenCV_LIBS})
target_link_libraries(ex2-split ${OpenCV_LIBS})
target_link_libraries(ex2-split-merge ${OpenCV_LIBS})
target_link_libraries(ex3-BGR2HSV ${OpenCV_LIBS})
target_link_libraries(ex3-readImage ${OpenCV_LIBS})
target_link_libraries(ex4-alphablend ${OpenCV_LIBS})
target_link_libraries(ex4-blendMask ${OpenCV_LIBS})
target_link_libraries(ex4-blueToneByEq ${OpenCV_LIBS})
target_link_libraries(ex4-pesudoColor ${OpenCV_LIBS})
target_link_libraries(ex4-toneByEq ${OpenCV_LIBS})
target_link_libraries(ex4-toneByTable ${OpenCV_LIBS})
target_link_libraries(ex5-blurs ${OpenCV_LIBS})
target_link_libraries(ex5-edges ${OpenCV_LIBS})
target_link_libraries(ex5-medBlur ${OpenCV_LIBS})
target_link_libraries(ex5-sharp ${OpenCV_LIBS})
target_link_libraries(sp7-mouseEvent ${OpenCV_LIBS})
target_link_libraries(sp7-mouseRect ${OpenCV_LIBS})
target_link_libraries(sp7-rotateScale ${OpenCV_LIBS})
target_link_libraries(ex7-perspective ${OpenCV_LIBS})
target_link_libraries(ex11-houghTrans ${OpenCV_LIBS})
target_link_libraries(ex11-tempMatch ${OpenCV_LIBS})
target_link_libraries(ex9-morpho ${OpenCV_LIBS})
target_link_libraries(sp9-skeleton ${OpenCV_LIBS})
target_link_libraries(ex9-length ${OpenCV_LIBS})
target_link_libraries(ex10-posterize64 ${OpenCV_LIBS})
target_link_libraries(ex10-posterizeAny ${OpenCV_LIBS})
target_link_libraries(ex12-frameSub ${OpenCV_LIBS})
target_link_libraries(ex12-backSub ${OpenCV_LIBS})
target_link_libraries(ex13-faceDetect ${OpenCV_LIBS})
target_link_libraries(ex13-catDetect ${OpenCV_LIBS})
